--- a/src/app/component/sidebar/sidebar.html
+++ b/src/app/component/sidebar/sidebar.html
@@ -1,7 +1,66 @@
 <div class="nav">
-  <ng-container >
-    <ng-template *ngIf="">
+  <ng-container *ngFor="let item of lists">
+    <ng-template [ngIf]="!item._hidden">
+      <li class="nav-group-title">
+        <span>{{ item.text }}</span>
+      </li>
+      <ng-container *ngFor="let child of item.children">
+        <li *ngIf="!child._hidden" [routerLinkActive]="['nav-item-selected']" [class.nav-submenu-open]="child._open">
+          <a *ngIf="child._type === 1" [routerLink]="child.link" [target]="child.target">
+            <i *ngIf="settingSer.layout.collapsed" class="{child.icon}"></i>
+            <nz-tooltip *ngIf="settingSer.layout.collapsed" nzPlacement="right" [nzTitle]="child.text">
+              <span nz-tooltip>
+                <i class="{{ child.icon }}"></i>
+              </span>
+            </nz-tooltip>
+            <span>{{child.text}}</span>
+          </a>
 
+          <a *ngIf="child._type === 2" href="{{ child.externalLink }}" target="{{ child.target }}">
+            <i *ngIf="settingSer.layout.collapsed" class="{{child.icon}}"></i>
+            <nz-tooltip *ngIf="settingSer.layout.collapsed" nzPlacement="right" [nzTitle]="child.text">
+              <span nz-tooltip>
+                <i class="{{ child.icon }}"></i>
+              </span>
+            </nz-tooltip>
+            <span>{{child.text}}</span>
+          </a>
+
+          <a *ngIf="child._type === 3" class="nav-sub-title" (click)="toggleOpen(child)">
+            <i class="{{ child.icon }}"></i>
+            <span>{{ child.text }}</span>
+          </a>
+          <div *ngIf="child.badge" class="badge badge-{{child.badge_status}}" [class.badge-dot]="child.badge_dot">
+            <em>{{child.badge}}</em>
+          </div>
+
+          <ul *ngIf="child._type === 3" class="nav nav-sub nav-depth{{ child._depth}}">
+            <ng-container *ngFor="let child1 of child.children">
+              <li *ngIf="!child1._hidden" [routerLinkActive]="['nav-item-selected']" [ngClass]="{ 'nav-submenu-open':child1._open }">
+                <a *ngIf="!child1._type === 1" [routerLink]="child1.link" [target]="child1.target">{{ child1.text }}</a>
+                <a *ngIf="!child1._type === 2" href="{{ child1.externalLink }}" target="{{ child1.target }}">{{ child1.text }}</a>
+                <a *ngIf="!child1._type === 3" class="nav-sun-title">{{ child1.text }}</a>
+                <div *ngIf="child1.badge"
+                  title="{{child1.badge}}"
+                  class="badge badge-{{child2.badge_status}}"
+                  [class.badge-dot]="child2.badge_dot"><em>{{ child1.badge }}</em></div>
+                  <ul *ngIf="child1._type === 3" class="nav nav-sub nav-depth{{child1._depth}}">
+                    <ng-container *ngFor="let child2 of child1.children" >
+                      <li *ngIf="!child2._hidden" [routerLinkActive]="['nav-item-selected']" [ngClass]="{ 'nav-submenu-open':child2._open }">
+                         <!-- link -->
+                         <a *ngIf="child2._type === 1" [routerLink]="child2.link" [target]="child2.target">{{ child2.text }}</a>
+                         <!-- external link -->
+                         <a *ngIf="child2._type === 2" href="{{ child2.externalLink }}" target="{{ child2.target }}">{{ child2.text }}</a>
+                         <!-- badge -->
+                         <div *ngIf="child2.badge" title="{{child2.badge}}" class="badge badge-{{child2.badge_status}}" [class.badge-dot]="child2.badge_dot"><em>{{child2.badge}}</em></div>
+                      </li>
+                    </ng-container>
+                  </ul>
+              </li>
+            </ng-container>
+          </ul>
+        </li>
+      </ng-container>
     </ng-template>
   </ng-container>
 </div>
